awaiting qa and final cleanup/polish

--- a/public/404.jade
+++ b/public/404.jade
@@ -1,3 +1,9 @@
 .container
 	.jumbotron
-		h1 Oops
+		.spacer-lg
+		h1 Oops, sorry.
+		h2 There's no such page apparently.
+		.spacer
+		a.btn.btn-primary(href='#{baseUrl}/') Head home 
+		.spacer-lg
+		
