--- a/public/css/themes/skq/theme.less
+++ b/public/css/themes/skq/theme.less
@@ -69,3 +69,21 @@ a:focus { text-decoration: none; }
   text-transform: uppercase;
   letter-spacing: .1em;
 }
+
+form {
+  .help-block {
+    font-size: .95em;
+    margin-bottom: 0;
+    color: @gray-light;
+  }
+  .help-block,
+  label {
+    margin-top: 1em;
+    font-family: @headings-font-family;
+    small { color: @gray-light; }
+  }
+  .btn-primary { 
+    width: 50%;
+    float: right;
+  }
+}
