--- a/public/index.jade
+++ b/public/index.jade
@@ -23,6 +23,7 @@
     .col-sm-4
       .skq-copy-wrapper
         .skq-copy-2.copy-oss
+          h5.visible-xs Open Source
           h4 Interested in trying Sidekiq out on your own project?
           p Check out the source code and documentation on GitHub to get started.
           a.btn.btn-primary.btn-lg.btn-white(href='https://github.com/mperham/sidekiq/' target='_new')
@@ -34,8 +35,9 @@
             span.glyphicon.glyphicon-hand-down
 
         .skq-copy-2.copy-pro
-          h4 Want to unlock advanced Skidekiq functionality?
-          p Nam magna enim, accumsan eu, blandit sed, blandit a, eros.
+          h5.visible-xs Pro
+          h4 Want to unlock advanced Sidekiq functionality?
+          p Nam magna enim, accumsan eu, blandit sed, luctus et ultrices blandit a, eros.
           a.btn.btn-primary.btn-lg(href='#{baseUrl}/products/pro')
             | Learn more &amp; Buy &emsp;
             span.glyphicon.glyphicon-chevron-right
@@ -45,8 +47,9 @@
             span.glyphicon.glyphicon-hand-down
 
         .skq-copy-2.copy-ent
-          h4 Looking to take Sidekiq to the next level?
-          p Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Nulla placerat aliquam wisi.
+          h5.visible-xs enterprise
+          h4 Need next-level performance for your company?
+          p Vestibulum ante ipsum primis in faucibus orci posuere cubilia Curae; Nulla placerat aliquam wisi.
           a.btn.btn-primary.btn-lg(href='#{baseUrl}/products/enterprise')
             | Learn more &amp; Buy
             | &emsp;
