--- a/public/_partials/header.jade
+++ b/public/_partials/header.jade
@@ -1,4 +1,4 @@
-nav.navbar.navbar-default.navbar-fixed-top(role="navigation")
+nav.navbar.navbar-default.navbar-fixed-top(role="navigation" class='#{tagline}')
   .container-fluid.skq-header
     .navbar-header
       button.navbar-toggle(data-toggle="collapse", data-target="#navbar-top-collapse-1")
@@ -13,6 +13,8 @@ nav.navbar.navbar-default.navbar-fixed-top(role="navigation")
     .collapse.navbar-collapse#navbar-top-collapse-1
       ul.nav.navbar-nav.navbar-right
         li
-          a.skq-nav-link(href="#{baseUrl}/support") Support
+          a.skq-nav-link(href="#{baseUrl}/#products") Products
+        li
+          a.skq-nav-link(href="#{baseUrl}/support") Help
         li
           a.skq-nav-link(href="#{baseUrl}/about") About
