--- a/public/_partials/subheader.jade
+++ b/public/_partials/subheader.jade
@@ -1,6 +1,6 @@
 .col-xs-12.page-links
-  a.jump-link(href='#features') Key Features
-  a.jump-link(href='#details') Product Details
+  a.jump-link.hidden-xs(href='#features') Key Features
+  a.jump-link.hidden-xs(href='#details') Product Details
   a.btn.btn-primary(href='#{purchaseUrl}') 
     | Buy Now 
     span $#{purchasePrice}/year
