wip on simplifying homepage

--- a/public/_partials/comparison-chart.jade
+++ b/public/_partials/comparison-chart.jade
@@ -1,124 +1,113 @@
-.charts-wrapper
-  .width-reference
-  .col-ent.col-mask.col-inactive
-    a.section-link.jump-link(href='#enterprise')
-    ul.list
-      li Med-Large Companies
-      li 
-        span.glyphicon.glyphicon-ok-sign  
-      li
-        span.glyphicon.glyphicon-ok-sign
-      li 
-        span.glyphicon.glyphicon-ok-sign  
-      li
-        span.glyphicon.glyphicon-ok-sign
-      li 
-        span.glyphicon.glyphicon-ok-sign  
-      li
-        span.glyphicon.glyphicon-ok-sign
-      li 
-        span.glyphicon.glyphicon-ok-sign  
-      li
-        span.glyphicon.glyphicon-ok-sign
-      li
-        span.glyphicon.glyphicon-ok-sign
-      li
-        span.glyphicon.glyphicon-ok-sign     
-      li
-        span.glyphicon.glyphicon-ok-sign              
-      li Email, Onboarding Session
-      li
-        | Commercial
-        br
-        small with Custom Terms
-      li 
-        | $1750 / year
-        br
-        small per 250 Worker Threads*
-      li Quote + Invoice
 
-  .col-pro.col-mask.col-inactive
-    a.section-link.jump-link(href='#pro')
-    ul.list
-      li Small Business
-      li 
-        span.glyphicon.glyphicon-ok-sign  
-      li
-        span.glyphicon.glyphicon-ok-sign
-      li 
-        span.glyphicon.glyphicon-ok-sign  
-      li
-        span.glyphicon.glyphicon-ok-sign
-      li 
-        span.glyphicon.glyphicon-ok-sign  
-      li
-        span.glyphicon.glyphicon-ok-sign
-      li 
-        span.glyphicon.glyphicon-ok-sign  
-      li
-        span.glyphicon.glyphicon-ok-sign
-      li
-        span.glyphicon.glyphicon-minus-sign
-      li
-        span.glyphicon.glyphicon-minus-sign     
-      li
-        span.glyphicon.glyphicon-minus-sign              
-      li Email
-      li
-        | Commercial
-        br
-        small No Custom Terms
-      li 
-        | $950 / year
-        br
-        small Unlimited Usage
-      li Credit Card
-  
-  .col-oss.col-mask.col-inactive
-    a.section-link.jump-link(href='#oss')
-    ul.list
-      li Hobbyists
-      li 
-        span.glyphicon.glyphicon-ok-sign  
-      li
-        span.glyphicon.glyphicon-ok-sign
-      li 
-        span.glyphicon.glyphicon-ok-sign  
-      li
-        span.glyphicon.glyphicon-ok-sign
-      li 
-        span.glyphicon.glyphicon-minus-sign  
-      li
-        span.glyphicon.glyphicon-minus-sign
-      li 
-        span.glyphicon.glyphicon-minus-sign  
-      li
-        span.glyphicon.glyphicon-minus-sign
-      li
-        span.glyphicon.glyphicon-minus-sign
-      li
-        span.glyphicon.glyphicon-minus-sign     
-      li
-        span.glyphicon.glyphicon-minus-sign              
-      li None
-      li LGPL
-      li Free
-      li n/a
+ul.product
+  li Hobbyists
+  li 
+    span.glyphicon.glyphicon-ok-sign  
+  li
+    span.glyphicon.glyphicon-ok-sign
+  li 
+    span.glyphicon.glyphicon-ok-sign  
+  li
+    span.glyphicon.glyphicon-ok-sign
+  li 
+    span.glyphicon.glyphicon-minus-sign  
+  li
+    span.glyphicon.glyphicon-minus-sign
+  li 
+    span.glyphicon.glyphicon-minus-sign  
+  li
+    span.glyphicon.glyphicon-minus-sign
+  li
+    span.glyphicon.glyphicon-minus-sign
+  li
+    span.glyphicon.glyphicon-minus-sign     
+  li
+    span.glyphicon.glyphicon-minus-sign              
+  li None
+  li LGPL
+  li Free
+  li n/a
+  li
+    a.btn.btn-primary.btn-lg.btn-white(href='https://github.com/mperham/sidekiq/' target='_new')
+      | Take me to GitHub &emsp;
+      span.glyphicon.glyphicon-new-window
 
-  ul.key
-    li Audience
-    li Scheduled Jobs
-    li Error Handling
-    li Web UI
-    li Ruby API
-    li Middleware
-    li Batches
-    li Enhanced Reliability
-    li Search in Web UI
-    li Rate Limiting
-    li Cron Jobs
-    li Leader Election
-    li Dedicated Support
-    li License
-    li Pricing
-    li Purchasing
+ul.product
+  li Small Business
+  li 
+    span.glyphicon.glyphicon-ok-sign  
+  li
+    span.glyphicon.glyphicon-ok-sign
+  li 
+    span.glyphicon.glyphicon-ok-sign  
+  li
+    span.glyphicon.glyphicon-ok-sign
+  li 
+    span.glyphicon.glyphicon-ok-sign  
+  li
+    span.glyphicon.glyphicon-ok-sign
+  li 
+    span.glyphicon.glyphicon-ok-sign  
+  li
+    span.glyphicon.glyphicon-ok-sign
+  li
+    span.glyphicon.glyphicon-minus-sign
+  li
+    span.glyphicon.glyphicon-minus-sign     
+  li
+    span.glyphicon.glyphicon-minus-sign              
+  li Email
+  li
+    | Commercial
+    br
+    small No Custom Terms
+  li 
+    | $950 / year
+    br
+    small Unlimited Usage
+  li Credit Card
+  li
+    a.btn.btn-primary.btn-lg.btn-black(href='#{baseUrl}/products/pro' target='_new')
+      | Learn more &amp; Buy
+      | &emsp;
+      span.glyphicon.glyphicon-chevron-right
+
+ul.product
+  li Med-Large Companies
+  li 
+    span.glyphicon.glyphicon-ok-sign  
+  li
+    span.glyphicon.glyphicon-ok-sign
+  li 
+    span.glyphicon.glyphicon-ok-sign  
+  li
+    span.glyphicon.glyphicon-ok-sign
+  li 
+    span.glyphicon.glyphicon-ok-sign  
+  li
+    span.glyphicon.glyphicon-ok-sign
+  li 
+    span.glyphicon.glyphicon-ok-sign  
+  li
+    span.glyphicon.glyphicon-ok-sign
+  li
+    span.glyphicon.glyphicon-ok-sign
+  li
+    span.glyphicon.glyphicon-ok-sign     
+  li
+    span.glyphicon.glyphicon-ok-sign              
+  li Email, Onboarding Session
+  li
+    | Commercial
+    br
+    small with Custom Terms
+  li 
+    | $1750 / year
+    br
+    small per 250 Worker Threads*
+  li Quote + Invoice
+  li
+    a.btn.btn-primary.btn-lg(href='#{baseUrl}/products/enterprise')
+      | Learn more &amp; Buy
+      | &emsp;
+      span.glyphicon.glyphicon-chevron-right
