--- a/public/index.jade
+++ b/public/index.jade
@@ -12,53 +12,33 @@
 
 #products.container.tab-header
   .row
-    .col-sm-12
+    .col-sm-3
       h5 Meet the Sidekiq Suite
-!= partial("_partials/tab-nav")  
+    .col-sm-9
+      != partial("_partials/tab-nav")  
 
 .comparison-chart.viewing-oss
   .row
-    .col-sm-8.chart-area
+    .col-sm-3
+      ul.key
+        li Audience
+        li Scheduled Jobs
+        li Error Handling
+        li Web UI
+        li Ruby API
+        li Middleware
+        li Batches
+        li Enhanced Reliability
+        li Search in Web UI
+        li Rate Limiting
+        li Cron Jobs
+        li Leader Election
+        li Dedicated Support
+        li License
+        li Pricing
+        li Purchasing
+    .col-sm-9
       != partial("_partials/comparison-chart")
-    .col-sm-4
-      .skq-copy-wrapper
-        .skq-copy-2.copy-oss
-          h5.visible-xs Open Source
-          h4 Interested in trying Sidekiq out on your own project?
-          p Check out the source code and documentation on GitHub to get started.
-          a.btn.btn-primary.btn-lg.btn-white(href='https://github.com/mperham/sidekiq/' target='_new')
-            | Take me to GitHub &emsp;
-            span.glyphicon.glyphicon-new-window
-          a.prompt.hidden-xs.jump-link(href='#pro')
-            | Need functionality built for business?
-            br
-            span.glyphicon.glyphicon-hand-down
-
-        .skq-copy-2.copy-pro
-          h5.visible-xs Pro
-          h4 Want to unlock advanced Sidekiq functionality?
-          p Nam magna enim, accumsan eu, blandit sed, luctus et ultrices blandit a, eros.
-          a.btn.btn-primary.btn-lg(href='#{baseUrl}/products/pro')
-            | Learn more &amp; Buy &emsp;
-            span.glyphicon.glyphicon-chevron-right
-          a.prompt.hidden-xs.jump-link(href='#enterprise') 
-            | Running a large company?
-            br
-            span.glyphicon.glyphicon-hand-down
-
-        .skq-copy-2.copy-ent
-          h5.visible-xs enterprise
-          h4 Need next-level performance for your company?
-          p Vestibulum ante ipsum primis in faucibus orci posuere cubilia Curae; Nulla placerat aliquam wisi.
-          a.btn.btn-primary.btn-lg(href='#{baseUrl}/products/enterprise')
-            | Learn more &amp; Buy
-            | &emsp;
-            span.glyphicon.glyphicon-chevron-right
-
-
-#oss.container.product.no-margin
-#pro.container.product.no-margin
-#enterprise.container.product.no-margin
-
+  .spacer
 
 != partial('_partials/subfooter')
