updated chart design, removed old js and styling

--- a/public/_partials/comparison-chart.jade
+++ b/public/_partials/comparison-chart.jade
@@ -1,113 +1,146 @@
+.comparison-chart
+  .row
+    .col-sm-2.no-padding.key-wrapper
+        ul.key
+          li
+          li Audience
+          li Scheduled Jobs
+          li Error Handling
+          li Web UI
+          li Ruby API
+          li Middleware
+          li Batches
+          li Enhanced Reliability
+          li Search in Web UI
+          li Rate Limiting
+          li Cron Jobs
+          li Leader Election
+          li Dedicated Support
+          li License
+          li Pricing
+          li Purchasing
+    .col-sm-10.no-padding
+      .charts-wrapper
+        ul.product.col-oss
+          li
+            h3
+              img.icon(src="#{baseUrl}/img/octocat.png") 
+              a(href='#{ossLink}' target='_new') OSS
+          li Hobbyists
+          li 
+            span.glyphicon.glyphicon-ok-sign  
+          li
+            span.glyphicon.glyphicon-ok-sign
+          li 
+            span.glyphicon.glyphicon-ok-sign  
+          li
+            span.glyphicon.glyphicon-ok-sign
+          li 
+            span.glyphicon.glyphicon-minus-sign  
+          li
+            span.glyphicon.glyphicon-minus-sign
+          li 
+            span.glyphicon.glyphicon-minus-sign  
+          li
+            span.glyphicon.glyphicon-minus-sign
+          li
+            span.glyphicon.glyphicon-minus-sign
+          li
+            span.glyphicon.glyphicon-minus-sign     
+          li
+            span.glyphicon.glyphicon-minus-sign              
+          li None
+          li LGPL
+          li Free
+          li n/a
+          li
+            a.btn.btn-primary.btn-lg.btn-white(href='https://github.com/mperham/sidekiq/' target='_new')
+              | Take me to GitHub &emsp;
+              span.glyphicon.glyphicon-new-window
 
-ul.product
-  li Hobbyists
-  li 
-    span.glyphicon.glyphicon-ok-sign  
-  li
-    span.glyphicon.glyphicon-ok-sign
-  li 
-    span.glyphicon.glyphicon-ok-sign  
-  li
-    span.glyphicon.glyphicon-ok-sign
-  li 
-    span.glyphicon.glyphicon-minus-sign  
-  li
-    span.glyphicon.glyphicon-minus-sign
-  li 
-    span.glyphicon.glyphicon-minus-sign  
-  li
-    span.glyphicon.glyphicon-minus-sign
-  li
-    span.glyphicon.glyphicon-minus-sign
-  li
-    span.glyphicon.glyphicon-minus-sign     
-  li
-    span.glyphicon.glyphicon-minus-sign              
-  li None
-  li LGPL
-  li Free
-  li n/a
-  li
-    a.btn.btn-primary.btn-lg.btn-white(href='https://github.com/mperham/sidekiq/' target='_new')
-      | Take me to GitHub &emsp;
-      span.glyphicon.glyphicon-new-window
+        ul.product.col-pro
+          li 
+            h3
+              a(href='#{baseUrl}/products/pro') Pro
+          li Small Business
+          li 
+            span.glyphicon.glyphicon-ok-sign  
+          li
+            span.glyphicon.glyphicon-ok-sign
+          li 
+            span.glyphicon.glyphicon-ok-sign  
+          li
+            span.glyphicon.glyphicon-ok-sign
+          li 
+            span.glyphicon.glyphicon-ok-sign  
+          li
+            span.glyphicon.glyphicon-ok-sign
+          li 
+            span.glyphicon.glyphicon-ok-sign  
+          li
+            span.glyphicon.glyphicon-ok-sign
+          li
+            span.glyphicon.glyphicon-minus-sign
+          li
+            span.glyphicon.glyphicon-minus-sign     
+          li
+            span.glyphicon.glyphicon-minus-sign              
+          li Email
+          li
+            | Commercial
+            br
+            small No Custom Terms
+          li 
+            | $950 / year
+            br
+            small Unlimited Usage
+          li Credit Card
+          li
+            a.btn.btn-primary.btn-lg.btn-black(href='#{baseUrl}/products/pro' target='_new')
+              | Learn more &amp; Buy
+              | &emsp;
+              span.glyphicon.glyphicon-chevron-right
 
-ul.product
-  li Small Business
-  li 
-    span.glyphicon.glyphicon-ok-sign  
-  li
-    span.glyphicon.glyphicon-ok-sign
-  li 
-    span.glyphicon.glyphicon-ok-sign  
-  li
-    span.glyphicon.glyphicon-ok-sign
-  li 
-    span.glyphicon.glyphicon-ok-sign  
-  li
-    span.glyphicon.glyphicon-ok-sign
-  li 
-    span.glyphicon.glyphicon-ok-sign  
-  li
-    span.glyphicon.glyphicon-ok-sign
-  li
-    span.glyphicon.glyphicon-minus-sign
-  li
-    span.glyphicon.glyphicon-minus-sign     
-  li
-    span.glyphicon.glyphicon-minus-sign              
-  li Email
-  li
-    | Commercial
-    br
-    small No Custom Terms
-  li 
-    | $950 / year
-    br
-    small Unlimited Usage
-  li Credit Card
-  li
-    a.btn.btn-primary.btn-lg.btn-black(href='#{baseUrl}/products/pro' target='_new')
-      | Learn more &amp; Buy
-      | &emsp;
-      span.glyphicon.glyphicon-chevron-right
+        ul.product.col-ent
+          li
+            h3
+              a(href='#{baseUrl}/products/enterprise') Enterprise
+          li Med&ndash;Lg Companies
+          li 
+            span.glyphicon.glyphicon-ok-sign  
+          li
+            span.glyphicon.glyphicon-ok-sign
+          li 
+            span.glyphicon.glyphicon-ok-sign  
+          li
+            span.glyphicon.glyphicon-ok-sign
+          li 
+            span.glyphicon.glyphicon-ok-sign  
+          li
+            span.glyphicon.glyphicon-ok-sign
+          li 
+            span.glyphicon.glyphicon-ok-sign  
+          li
+            span.glyphicon.glyphicon-ok-sign
+          li
+            span.glyphicon.glyphicon-ok-sign
+          li
+            span.glyphicon.glyphicon-ok-sign     
+          li
+            span.glyphicon.glyphicon-ok-sign              
+          li Email, Onboarding Session
+          li
+            | Commercial
+            br
+            small with Custom Terms
+          li 
+            | $1750 / year
+            br
+            small.help(title="Worker threads are calculated by adding up the concurrency of all your production processes. 10 processes with the default concurrency of 25 = 250 worker threads.") per 250 Worker Threads*
+          li Quote + Invoice
+          li
+            a.btn.btn-primary.btn-lg(href='#{baseUrl}/products/enterprise')
+              | Learn more &amp; Buy
+              | &emsp;
+              span.glyphicon.glyphicon-chevron-right
 
-ul.product
-  li Med-Large Companies
-  li 
-    span.glyphicon.glyphicon-ok-sign  
-  li
-    span.glyphicon.glyphicon-ok-sign
-  li 
-    span.glyphicon.glyphicon-ok-sign  
-  li
-    span.glyphicon.glyphicon-ok-sign
-  li 
-    span.glyphicon.glyphicon-ok-sign  
-  li
-    span.glyphicon.glyphicon-ok-sign
-  li 
-    span.glyphicon.glyphicon-ok-sign  
-  li
-    span.glyphicon.glyphicon-ok-sign
-  li
-    span.glyphicon.glyphicon-ok-sign
-  li
-    span.glyphicon.glyphicon-ok-sign     
-  li
-    span.glyphicon.glyphicon-ok-sign              
-  li Email, Onboarding Session
-  li
-    | Commercial
-    br
-    small with Custom Terms
-  li 
-    | $1750 / year
-    br
-    small per 250 Worker Threads*
-  li Quote + Invoice
-  li
-    a.btn.btn-primary.btn-lg(href='#{baseUrl}/products/enterprise')
-      | Learn more &amp; Buy
-      | &emsp;
-      span.glyphicon.glyphicon-chevron-right
