--- a/public/_partials/tab-nav.jade
+++ b/public/_partials/tab-nav.jade
@@ -1,14 +1,13 @@
-.row.tabs-holder.no-margin
 .row.skq-tabs.no-margin(class='#{mode}')
   .col-xs-4.skq-tab-left 
-    a.jump-link(href='#{ossLink}')
+    a(href='#{ossLink}')
     h3
       img.icon(src="#{baseUrl}/img/octocat.png") 
       | OSS
   .col-xs-4.skq-tab-center
-    a.jump-link(href='#{proLink}')
+    a(href='#{baseUrl}/products/pro')
     h3 Pro
   .col-xs-4.skq-tab-right
-    a.jump-link(href='#{entLink}')
+    a(href='#{baseUrl}/products/enterprise')
     h3 Enterprise
     h5.angle-tag New
