--- a/public/css/themes/skq/theme.less
+++ b/public/css/themes/skq/theme.less
@@ -46,7 +46,7 @@ a:focus { text-decoration: none; }
 	width: 100%;
 	background-color: #fff;
 	margin: 0;
-	padding: @grid-gutter-width (@grid-gutter-width * 1.5);
+	padding: (@grid-gutter-width * 1.5);
 	padding-top: 0;
 }
 
@@ -58,6 +58,10 @@ a:focus { text-decoration: none; }
 .no-padding {
   padding-left: 0;
   padding-right: 0;
+}
+
+.max-width {
+  max-width: @max-width;
 }
 
 .btn-primary {
