--- a/public/_partials/head.jade
+++ b/public/_partials/head.jade
@@ -11,7 +11,7 @@ meta(property='og:description' content='Sidekiq is a simple, efficient system fo
 meta(name='viewport' content='width=device-width, initial-scale=1.0')
 
 link(rel='stylesheet', href='#{baseUrl}/css/global.css')
-//- link(rel='stylesheet', href='http://fonts.googleapis.com/css?family=Armata|Montserrat:400,700')
+link(rel='stylesheet', href='http://fonts.googleapis.com/css?family=Armata|Montserrat:400,700')
 link(rel='canonical' href='http://sidekiq.org/')
 link(rel='shortcut icon' type='image/ico' href='/favicon.ico')
 
